--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://blist.vercel.app"
+baseurl = "https://twowheelspics24.netlify.app/"
 metaDataFormat = "yaml"
 title = "twowheelspics24"
 theme = "blist"
